Update with the recommended changes and fixed the src build failure.

--- a/test-output/old/Suite1/classes.html
+++ b/test-output/old/Suite1/classes.html
@@ -11,12 +11,32 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testDiv</td>
+<td>testTangens</td>
+<td>negative </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testNegAdd</td>
+<td>negative </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testMul</td>
 <td>positive </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSqrt</td>
+<td>testCosine</td>
+<td>negative </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testNegSqrt</td>
+<td>negative </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testDiv</td>
 <td>positive </td>
 </tr>
 <tr>
@@ -26,8 +46,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testNegAdd</td>
-<td>negative </td>
+<td>testSqrt</td>
+<td>positive,broken </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -41,18 +61,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testMul</td>
-<td>positive </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>testNegMul</td>
 <td>negative </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>testNegDiv</td>
-<td>negative </td>
+<td>negative, broken </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -62,11 +77,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>testNegSub</td>
-<td>negative </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>testNegSqrt</td>
 <td>negative </td>
 </tr>
 <tr>
