--- a/test-output/old/Suite1/methods-not-run.html
+++ b/test-output/old/Suite1/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.atm.xunit.hometask.runner.CalculatorTest.testNegDiv</td></tr>
+<tr><td>com.atm.xunit.hometask.runner.CalculatorTest.testSqrt</td></tr>
 </table>
